style.css
main {
  width: 100%;
  height: 100%;
}

.highlight {
  color: var(--main);
}

.highlight-first::first-letter {
  color: var(--main);
}

.icon-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 140px;
}

.icon-wrapper img {
  width: 20px;
}

footer {
  font-size: 12px;
}

/* Small screen */
@media (max-width: 699px) {

  .main-section {
    height: fit-content;
    margin-top: 100px;
  }

  #abode {
    margin-top: 150px; /* Landing page starts lower */
  }

  .main-section p, .main-section h1, .main-section h2, .main-section h3, .main-section ul {
    margin: 20px 20px;
  }

  .main-section > div {
    margin-top: 20px;
    margin-bottom: 20px;
  }

  .icon-wrapper {
    margin-left: 20px;
  }
}

/* Wide screen */
@media (min-width: 700px) {
  html, body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .main-section {
    margin: 0px 20px;
    height: fit-content;
    margin-top: 100px;
  }

  .main-section > div {
    margin: 20px 0px;
  }

  /* Abode */

  #abode {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: 
        "portrait greeting";
  }

  #abode img {
    z-index: 1;
    box-shadow: -5px 5px 15px rgba(0, 0, 0, 0.99);
  }

  #abode .wrapper {
    grid-area: greeting;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  #abode h1 {
    width: min-content;
    transform: translateX(-35%);  
    background: transparent;
    font-size: 10vw;
    z-index: 2;
  }

  #transition1 {
    background-color: #202020;
    transform: translateY(-20%);
    width: 100%;
    height: fit-content;
    padding: 15vw 0;
  }

  #transition1 p {
    margin: 0 auto;
    width: 60%;
    font-size: clamp(16px, 2vw, 26px);
    color: white;
  }

  #narrative {
  margin-top: 0px;
  }

  /* Narrative */
  #narrative {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-areas: 
        "description slideshow";
    margin-left: 5%; /*Fixes margin after transform*/ 

  }

  #narrative .wrapper {
    grid-area: slideshow;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transform: translate(-10%, 15%);
    background: transparent;
  }

  #narrative .wrapper .slideshow {
    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.3);
  }

  #narrative .wrapper .tab {
    box-shadow: -5px 5px 10px rgba(0, 0, 0, 0.99);
  }

  #narrative .wrapper2 {
    grid-area: description;
    display: flex;
    flex-direction: column;
    background-color: #dddddd;
    color: black;
    font-size: clamp(16px, 2vw, 26px);
    padding: 20px;
    padding-right: 15%;
  }

  #narrative .wrapper2 h2 {
    margin-bottom: 20%;

  }

  #details {
    background-color: #202020;
    padding: 300px 0;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  #yours {
    background-color: #202020;

  }
  .test {
    width: 500px;
  }
}

